.provarCaches/00D410000011HE0EAM/objects/rstk__icreceptacle__c.object
<CustomObject>
    <description>icreceptacle__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icreceptacle_div__r.rstk__sydiv_div__c  + &quot;_&quot; + rstk__icreceptacle_type__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icreceptacle_type__c+&quot;(&quot;+rstk__icreceptacle_desc__c+&quot;)&quot;</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreceptacle_desc__c</fullName>
        <inlineHelpText>Description of this receptacle.  Up to 100 characters.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreceptacle_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Company Division for this record.  Must be valid division from Company Division Master.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Receptacles Master</relationshipLabel>
        <relationshipName>icreceptacles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icreceptacle_qtypercont__c</fullName>
        <inlineHelpText>The quantity of this receptacle that can fit into a standard container.  Manually maintained.  Not required.</inlineHelpText>
        <label>Quantity per Container</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreceptacle_type__c</fullName>
        <inlineHelpText>User defined code representing this specific container.  F/e, Box, Bottle, Cylinder, etc.  Required.  Up to 30 characters.</inlineHelpText>
        <label>Receptacle Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icreceptacle_wmsqty__c</fullName>
        <inlineHelpText>The number of this receptacle currently at Chemsource.  This is a manually maintained field, not required.</inlineHelpText>
        <label>Quantity at WMS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Receptacle Master</label>
    <listViews>
        <fullName>rstk__RS_Receptacles_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__icreceptacle_div__c</columns>
        <columns>rstk__icreceptacle_type__c</columns>
        <columns>rstk__icreceptacle_desc__c</columns>
        <columns>rstk__icreceptacle_wmsqty__c</columns>
        <columns>rstk__icreceptacle_qtypercont__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Receptacles Master</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receptacles Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Quantity_at_WMS</fullName>
        <active>true</active>
        <description>Quantity at WMS should be greater or equal to zero</description>
        <errorConditionFormula>NOT( ISBLANK(rstk__icreceptacle_wmsqty__c) ) &amp;&amp; rstk__icreceptacle_wmsqty__c &lt; 0</errorConditionFormula>
        <errorMessage>Quantity at WMS should be greater or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Quantity_per_Container</fullName>
        <active>true</active>
        <description>Quantity per Container should be greater or equal to zero</description>
        <errorConditionFormula>NOT( ISBLANK(rstk__icreceptacle_qtypercont__c) ) &amp;&amp; rstk__icreceptacle_qtypercont__c &lt;0</errorConditionFormula>
        <errorMessage>Quantity per Container should be greater or equal to zero</errorMessage>
    </validationRules>
</CustomObject>